# JustMySockets-to-ClashMi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
subscription-converter/subscription_converter/: __init__.py  admin_frontend.py  app.py  cache.py  config.py  converter_registry.py  frontend.py  link_store.py  models.py  network_guard.py  parser_port.py  rate_limit.py  subscription_parser.py  url_input.py
subscription-converter/subscription_converter/converters/: __init__.py  mihomo.py  singbox.py  surge.py
subscription-converter/subscription_converter/parsers/: __init__.py  _helpers.py  hysteria2.py  ss.py  trojan.py  tuic.py  vless.py  vmess.py
subscription-converter/tests/: __init__.py  test_app.py  test_cache.py  test_config.py  test_link_store.py  test_mihomo_converter.py  test_models.py  test_no_real_credentials.py  test_parser_registry.py  test_protocol_parsers.py  test_rate_limit.py  test_security_fixes.py  test_smoke.py  test_subscription_parser.py  test_url_input.py
