[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-converter"
version = "0.1.0"
description = "Production-ready Just My Socks subscription converter (Mihomo / Clash Meta)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "subscription-converter maintainers" }]
keywords = ["clash", "mihomo", "subscription", "proxy", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.139,<0.140",
    "starlette>=1.3.1,<1.4",
    "uvicorn[standard]>=0.34,<0.40",
    "httpx>=0.27,<0.30",
    "pydantic>=2.9,<3.0",
    "PyYAML>=6.0,<7.0",
    "cryptography>=48.0.1,<49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.4,<2.0",
    "respx>=0.21,<0.30",
    "httpx2>=2.5,<3.0",
    "ruff>=0.8,<0.12",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
    "pip-audit>=2.10,<3.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/JunWeiLi233/JustMySockets-to-ClashMi"
Issues = "https://github.com/JunWeiLi233/JustMySockets-to-ClashMi/issues"

# ---------------------------------------------------------------------------
# setuptools: the importable package `subscription_converter` lives under
# `subscription-converter/` (which acts as a src root). All sub-packages
# (converters, parsers) are discovered automatically.
# ---------------------------------------------------------------------------
[tool.setuptools]
packages = { find = { where = ["subscription-converter"] } }

# ---------------------------------------------------------------------------
# Ruff: formatter + linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["_legacy", "_staging"]

[tool.ruff.lint]
# Enable a focused, conservative rule set.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests may use shorter imports and less strict patterns.
"tests/**/*.py" = ["B008", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy: strict typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = "^(_legacy|_staging)/"

[[tool.mypy.overrides]]
# Dependencies without bundled stubs.
module = ["respx.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["subscription-converter/tests"]
pythonpath = ["subscription-converter"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that require external services (e.g. the mihomo binary)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
